CVS_SILENT i18n style guide fixes. http://developer.kde.org/documentation/standards/kde/style/basics/labels.html
svn path=/trunk/kdesdk/umbrello/; revision=317402

--- a/umbrello/dialogs/diagrampropertiespage.ui
+++ b/umbrello/dialogs/diagrampropertiespage.ui
@@ -335,7 +335,7 @@ If 'Snap to Grid' is enabled a component will always be aligned with the grid on
                                         <cstring>TextLabe15</cstring>
                                     </property>
                                     <property name="text">
-                                        <string>Line Width:  </string>
+                                        <string>Line width:  </string>
                                     </property>
                                 </widget>
                                 <widget class="QSpinBox">
