CVS_SILENT i18n style guide fixes http://developer.kde.org/documentation/standards/kde/style/basics/labels.html
svn path=/trunk/kdesdk/umbrello/; revision=322768

--- a/umbrello/codegenerators/javacodegenerationformbase.ui
+++ b/umbrello/codegenerators/javacodegenerationformbase.ui
@@ -96,7 +96,7 @@
                                         <cstring>m_generateAssocAccessors</cstring>
                                     </property>
                                     <property name="text">
-                                        <string>Association Accessor methods</string>
+                                        <string>Association accessor methods</string>
                                     </property>
                                     <property name="checked">
                                         <bool>true</bool>
@@ -107,7 +107,7 @@
                                         <cstring>m_generateAttribAccessors</cstring>
                                     </property>
                                     <property name="text">
-                                        <string>Attribute Accessor methods</string>
+                                        <string>Attribute accessor methods</string>
                                     </property>
                                     <property name="checked">
                                         <bool>true</bool>
