Partial fix for bug 84515 (option to turn off params on sequence messages.) Added is a new diagram general configuration option for this. What is still missing is a signal that will instantly change all message signatures when the diagram option is changed. CCBUG:84515
svn path=/trunk/kdesdk/umbrello/; revision=383467

--- a/umbrello/dialogs/diagrampropertiespage.ui
+++ b/umbrello/dialogs/diagrampropertiespage.ui
@@ -12,6 +12,9 @@
             <height>388</height>
         </rect>
     </property>
+    <property name="caption">
+        <string>DiagramPropertiesPage</string>
+    </property>
     <vbox>
         <property name="name">
             <cstring>unnamed</cstring>
@@ -70,7 +73,7 @@
                 </widget>
                 <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>layout9</cstring>
+                        <cstring>layout20</cstring>
                     </property>
                     <hbox>
                         <property name="name">
@@ -133,11 +136,19 @@
                             </property>
                             <property name="sizeHint">
                                 <size>
-                                    <width>210</width>
+                                    <width>50</width>
                                     <height>20</height>
                                 </size>
                             </property>
                         </spacer>
+                        <widget class="QCheckBox">
+                            <property name="name">
+                                <cstring>showOpSigs</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Show operation signature</string>
+                            </property>
+                        </widget>
                     </hbox>
                 </widget>
                 <widget class="Line">
