--- a/umbrello/autolayout/newautolayoutdialog.ui
+++ b/umbrello/autolayout/newautolayoutdialog.ui
@@ -38,7 +38,7 @@
                         <cstring>textLabel3</cstring>
                     </property>
                     <property name="text">
-                        <string>La&amp;yout Algorithm</string>
+                        <string>La&amp;yout algorithm:</string>
                     </property>
                     <property name="buddy" stdset="0">
                         <cstring>comboBox1</cstring>
@@ -85,7 +85,7 @@
                         <cstring>textLabel1</cstring>
                     </property>
                     <property name="text">
-                        <string>Shape separation</string>
+                        <string>Shape separation:</string>
                     </property>
                     <property name="buddy" stdset="0">
                         <cstring>shapeSeparationSB</cstring>
@@ -126,7 +126,7 @@
                         <cstring>clusterizeHierarchiesCB</cstring>
                     </property>
                     <property name="text">
-                        <string>Clusteri&amp;ze Hierarchies</string>
+                        <string>Clusteri&amp;ze hierarchies</string>
                     </property>
                 </widget>
                 <widget class="QCheckBox">
@@ -134,7 +134,7 @@
                         <cstring>centerDiagramCB</cstring>
                     </property>
                     <property name="text">
-                        <string>Ce&amp;nter Diagram</string>
+                        <string>Ce&amp;nter diagram</string>
                     </property>
                 </widget>
                 <widget class="QCheckBox">
@@ -142,7 +142,7 @@
                         <cstring>compressShapesCB</cstring>
                     </property>
                     <property name="text">
-                        <string>Co&amp;mpress Shapes</string>
+                        <string>Co&amp;mpress shapes</string>
                     </property>
                 </widget>
             </hbox>
@@ -180,7 +180,7 @@
                                 <cstring>generalizationCB</cstring>
                             </property>
                             <property name="text">
-                                <string>Generalization as Ed&amp;ges</string>
+                                <string>Generalization as ed&amp;ges</string>
                             </property>
                             <property name="checked">
                                 <bool>true</bool>
@@ -235,7 +235,7 @@
                                 <cstring>associationEdgesCB</cstring>
                             </property>
                             <property name="text">
-                                <string>Association as Ed&amp;ges</string>
+                                <string>Association as ed&amp;ges</string>
                             </property>
                         </widget>
                         <widget class="QSlider">
@@ -290,7 +290,7 @@
                                 <cstring>dependenciesEdgesCB</cstring>
                             </property>
                             <property name="text">
-                                <string>Dependencies &amp;as Edges</string>
+                                <string>Dependencies &amp;as edges</string>
                             </property>
                         </widget>
                         <widget class="QSlider">
@@ -375,37 +375,6 @@
                 </spacer>
                 <widget class="QPushButton">
                     <property name="name">
-                        <cstring>buttonOk</cstring>
-                    </property>
-                    <property name="text">
-                        <string>&amp;OK</string>
-                    </property>
-                    <property name="accel">
-                        <string></string>
-                    </property>
-                    <property name="autoDefault">
-                        <bool>true</bool>
-                    </property>
-                    <property name="default">
-                        <bool>true</bool>
-                    </property>
-                </widget>
-                <widget class="QPushButton">
-                    <property name="name">
-                        <cstring>buttonCancel</cstring>
-                    </property>
-                    <property name="text">
-                        <string>&amp;Cancel</string>
-                    </property>
-                    <property name="accel">
-                        <string></string>
-                    </property>
-                    <property name="autoDefault">
-                        <bool>true</bool>
-                    </property>
-                </widget>
-                <widget class="QPushButton">
-                    <property name="name">
                         <cstring>restoreDefaultsBTN</cstring>
                     </property>
                     <property name="text">
@@ -417,9 +386,40 @@
                         <cstring>saveDefaultsBTN</cstring>
                     </property>
                     <property name="text">
-                        <string>Save As Defa&amp;ult</string>
+                        <string>Save as Defa&amp;ult</string>
                     </property>
                 </widget>
+		<widget class="QPushButton">
+			<property name="name">
+				<cstring>buttonOk</cstring>
+			</property>
+			<property name="text">
+				<string>&amp;OK</string>
+			</property>
+			<property name="accel">
+				<string></string>
+			</property>
+			<property name="autoDefault">
+				<bool>true</bool>
+			</property>
+			<property name="default">
+				<bool>true</bool>
+			</property>
+		</widget>
+		<widget class="QPushButton">
+			<property name="name">
+				<cstring>buttonCancel</cstring>
+			</property>
+			<property name="text">
+				<string>&amp;Cancel</string>
+			</property>
+			<property name="accel">
+				<string></string>
+			</property>
+			<property name="autoDefault">
+				<bool>true</bool>
+			</property>
+		</widget>
             </hbox>
         </widget>
     </vbox>
