--- a/umbrello/dialogs/codegenerationwizardbase.ui
+++ b/umbrello/dialogs/codegenerationwizardbase.ui
@@ -12,7 +12,7 @@
             <height>386</height>
         </rect>
     </property>
-    <property name="caption">
+    <property name="windowTitle">
         <string>Code Generation Wizard</string>
     </property>
     <widget class="QWidget">
