--- a/umbrello/dialogs/codegenerationwizardbase.ui
+++ b/umbrello/dialogs/codegenerationwizardbase.ui
@@ -118,6 +118,9 @@ for in the right hand side list</string>
                                 <verstretch>0</verstretch>
                             </sizepolicy>
                         </property>
+                        <property name="selectionMode">
+                            <enum>Extended</enum>
+                        </property>
                     </widget>
                     <widget class="QPushButton" row="3" column="1">
                         <property name="name">
@@ -172,6 +175,9 @@ for in the right hand side list</string>
                                 <horstretch>1</horstretch>
                                 <verstretch>0</verstretch>
                             </sizepolicy>
+                        </property>
+                        <property name="selectionMode">
+                            <enum>Extended</enum>
                         </property>
                     </widget>
                     <spacer row="4" column="1">
