--- a/umbrello/dialogs/umlrolepropertiesbase.ui
+++ b/umbrello/dialogs/umlrolepropertiesbase.ui
@@ -1,203 +1,182 @@
-<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
-<class>UMLRolePropertiesBase</class>
-<widget class="QWidget">
-    <property name="name">
-        <cstring>UMLRolePropertiesBase</cstring>
+<ui version="4.0" stdsetdef="1" >
+  <author></author>
+  <comment></comment>
+  <exportmacro></exportmacro>
+  <class>UMLRolePropertiesBase</class>
+  <widget class="QWidget" name="UMLRolePropertiesBase" >
+    <property name="geometry" >
+      <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>572</width>
+        <height>545</height>
+      </rect>
     </property>
-    <property name="geometry">
+    <widget class="QWidget" name="layout6" >
+      <property name="geometry" >
         <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>572</width>
-            <height>545</height>
+          <x>10</x>
+          <y>10</y>
+          <width>400</width>
+          <height>520</height>
         </rect>
-    </property>
-    <widget class="QLayoutWidget">
-        <property name="name">
-            <cstring>layout6</cstring>
+      </property>
+      <layout class="QGridLayout" >
+        <property name="margin" >
+          <number>0</number>
         </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>10</y>
-                <width>400</width>
-                <height>520</height>
-            </rect>
-        </property>
-        <grid>
-            <property name="name">
-                <cstring>unnamed</cstring>
+        <item row="0" column="0" >
+          <widget class="Q3GroupBox" name="propsGroupBox" >
+            <property name="title" >
+              <string>Role Properties</string>
             </property>
-            <widget class="QGroupBox" row="0" column="0">
-                <property name="name">
-                    <cstring>propsGroupBox</cstring>
+            <widget class="QWidget" name="layout5" >
+              <property name="geometry" >
+                <rect>
+                  <x>10</x>
+                  <y>30</y>
+                  <width>360</width>
+                  <height>70</height>
+                </rect>
+              </property>
+              <layout class="QGridLayout" >
+                <property name="margin" >
+                  <number>0</number>
                 </property>
-                <property name="title">
-                    <string>Role Properties</string>
-                </property>
-                <widget class="QLayoutWidget">
-                    <property name="name">
-                        <cstring>layout5</cstring>
+                <item row="0" column="0" >
+                  <widget class="QLabel" name="roleNameLabel" >
+                    <property name="text" >
+                      <string>Rolename:</string>
                     </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>10</x>
-                            <y>30</y>
-                            <width>360</width>
-                            <height>70</height>
-                        </rect>
+                    <property name="wordWrap" >
+                      <bool>false</bool>
                     </property>
-                    <grid>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <widget class="QLabel" row="0" column="0">
-                            <property name="name">
-                                <cstring>roleNameLabel</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Rolename:</string>
-                            </property>
-                        </widget>
-                        <widget class="QLineEdit" row="1" column="1">
-                            <property name="name">
-                                <cstring>m_pMultiLE</cstring>
-                            </property>
-                        </widget>
-                        <widget class="QLineEdit" row="0" column="1">
-                            <property name="name">
-                                <cstring>m_pRoleLE</cstring>
-                            </property>
-                        </widget>
-                        <widget class="QLabel" row="1" column="0">
-                            <property name="name">
-                                <cstring>textLabel2</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Multiplicity:</string>
-                            </property>
-                        </widget>
-                    </grid>
+                  </widget>
+                </item>
+                <item row="1" column="1" >
+                  <widget class="QLineEdit" name="m_pMultiLE" />
+                </item>
+                <item row="0" column="1" >
+                  <widget class="QLineEdit" name="m_pRoleLE" />
+                </item>
+                <item row="1" column="0" >
+                  <widget class="QLabel" name="textLabel2" >
+                    <property name="text" >
+                      <string>Multiplicity:</string>
+                    </property>
+                    <property name="wordWrap" >
+                      <bool>false</bool>
+                    </property>
+                  </widget>
+                </item>
+              </layout>
+            </widget>
+          </widget>
+        </item>
+        <item row="3" column="0" >
+          <widget class="Q3GroupBox" name="docGroupBox" >
+            <property name="title" >
+              <string>Documentation</string>
+            </property>
+            <layout class="QGridLayout" >
+              <property name="margin" >
+                <number>0</number>
+              </property>
+              <item row="0" column="0" >
+                <widget class="Q3TextEdit" name="m_pDocTE" />
+              </item>
+            </layout>
+          </widget>
+        </item>
+        <item row="2" column="0" >
+          <widget class="Q3ButtonGroup" name="changeabilityButtonGroup" >
+            <property name="title" >
+              <string>Role Changeability</string>
+            </property>
+            <layout class="QGridLayout" >
+              <property name="margin" >
+                <number>0</number>
+              </property>
+              <item row="0" column="0" >
+                <layout class="QGridLayout" >
+                  <property name="margin" >
+                    <number>0</number>
+                  </property>
+                  <item row="0" column="2" >
+                    <widget class="QRadioButton" name="m_pAddOnlyRB" >
+                      <property name="text" >
+                        <string>Add only</string>
+                      </property>
+                    </widget>
+                  </item>
+                  <item row="0" column="1" >
+                    <widget class="QRadioButton" name="m_pFrozenRB" >
+                      <property name="text" >
+                        <string>Frozen</string>
+                      </property>
+                    </widget>
+                  </item>
+                  <item row="0" column="0" >
+                    <widget class="QRadioButton" name="m_pChangeableRB" >
+                      <property name="text" >
+                        <string>Changeable</string>
+                      </property>
+                      <property name="checked" >
+                        <bool>true</bool>
+                      </property>
+                    </widget>
+                  </item>
+                </layout>
+              </item>
+            </layout>
+          </widget>
+        </item>
+        <item row="1" column="0" >
+          <widget class="Q3ButtonGroup" name="visibilityButtonGroup" >
+            <property name="title" >
+              <string>Role Visibility</string>
+            </property>
+            <layout class="QGridLayout" >
+              <property name="margin" >
+                <number>0</number>
+              </property>
+              <item row="0" column="0" >
+                <widget class="QRadioButton" name="m_pPublicRB" >
+                  <property name="text" >
+                    <string>Public</string>
+                  </property>
+                  <property name="checked" >
+                    <bool>true</bool>
+                  </property>
                 </widget>
-            </widget>
-            <widget class="QGroupBox" row="3" column="0">
-                <property name="name">
-                    <cstring>docGroupBox</cstring>
-                </property>
-                <property name="title">
-                    <string>Documentation</string>
-                </property>
-                <grid>
-                    <property name="name">
-                        <cstring>unnamed</cstring>
-                    </property>
-                    <widget class="QTextEdit" row="0" column="0">
-                        <property name="name">
-                            <cstring>m_pDocTE</cstring>
-                        </property>
-                    </widget>
-                </grid>
-            </widget>
-            <widget class="QButtonGroup" row="2" column="0">
-                <property name="name">
-                    <cstring>changeabilityButtonGroup</cstring>
-                </property>
-                <property name="title">
-                    <string>Role Changeability</string>
-                </property>
-                <grid>
-                    <property name="name">
-                        <cstring>unnamed</cstring>
-                    </property>
-                    <widget class="QLayoutWidget" row="0" column="0">
-                        <property name="name">
-                            <cstring>layout2</cstring>
-                        </property>
-                        <grid>
-                            <property name="name">
-                                <cstring>unnamed</cstring>
-                            </property>
-                            <widget class="QRadioButton" row="0" column="2">
-                                <property name="name">
-                                    <cstring>m_pAddOnlyRB</cstring>
-                                </property>
-                                <property name="text">
-                                    <string>Add only</string>
-                                </property>
-                            </widget>
-                            <widget class="QRadioButton" row="0" column="1">
-                                <property name="name">
-                                    <cstring>m_pFrozenRB</cstring>
-                                </property>
-                                <property name="text">
-                                    <string>Frozen</string>
-                                </property>
-                            </widget>
-                            <widget class="QRadioButton" row="0" column="0">
-                                <property name="name">
-                                    <cstring>m_pChangeableRB</cstring>
-                                </property>
-                                <property name="text">
-                                    <string>Changeable</string>
-                                </property>
-                                <property name="checked">
-                                    <bool>true</bool>
-                                </property>
-                            </widget>
-                        </grid>
-                    </widget>
-                </grid>
-            </widget>
-            <widget class="QButtonGroup" row="1" column="0">
-                <property name="name">
-                    <cstring>visibilityButtonGroup</cstring>
-                </property>
-                <property name="title">
-                    <string>Role Visibility</string>
-                </property>
-                <grid>
-                    <property name="name">
-                        <cstring>unnamed</cstring>
-                    </property>
-                    <widget class="QRadioButton" row="0" column="0">
-                        <property name="name">
-                            <cstring>m_pPublicRB</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Public</string>
-                        </property>
-                        <property name="checked">
-                            <bool>true</bool>
-                        </property>
-                    </widget>
-                    <widget class="QRadioButton" row="0" column="1">
-                        <property name="name">
-                            <cstring>m_pPrivateRB</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Private</string>
-                        </property>
-                    </widget>
-                    <widget class="QRadioButton" row="0" column="2">
-                        <property name="name">
-                            <cstring>m_pProtectedRB</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Protected</string>
-                        </property>
-                    </widget>
-                    <widget class="QRadioButton" row="0" column="3">
-                        <property name="name">
-                            <cstring>m_pImplementationRB</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Implementation</string>
-                        </property>
-                    </widget>
-                </grid>
-            </widget>
-        </grid>
+              </item>
+              <item row="0" column="1" >
+                <widget class="QRadioButton" name="m_pPrivateRB" >
+                  <property name="text" >
+                    <string>Private</string>
+                  </property>
+                </widget>
+              </item>
+              <item row="0" column="2" >
+                <widget class="QRadioButton" name="m_pProtectedRB" >
+                  <property name="text" >
+                    <string>Protected</string>
+                  </property>
+                </widget>
+              </item>
+              <item row="0" column="3" >
+                <widget class="QRadioButton" name="m_pImplementationRB" >
+                  <property name="text" >
+                    <string>Implementation</string>
+                  </property>
+                </widget>
+              </item>
+            </layout>
+          </widget>
+        </item>
+      </layout>
     </widget>
-</widget>
-<layoutdefaults spacing="6" margin="11"/>
-</UI>
+  </widget>
+  <layoutdefault spacing="6" margin="11" />
+  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+</ui>
