--- a/umbrello/codegenerators/javacodegenerationformbase.ui
+++ b/umbrello/codegenerators/javacodegenerationformbase.ui
@@ -19,7 +19,7 @@
             <number>0</number>
           </property>
           <item row="3" column="0" >
-            <widget class="Q3GroupBox" name="groupBox3" >
+            <widget class="QGroupBox" name="groupBox3" >
               <property name="sizePolicy" >
                 <sizepolicy>
                   <hsizetype>5</hsizetype>
@@ -46,7 +46,7 @@
             </widget>
           </item>
           <item row="2" column="0" >
-            <widget class="Q3GroupBox" name="groupBox2" >
+            <widget class="QGroupBox" name="groupBox2" >
               <property name="sizePolicy" >
                 <sizepolicy>
                   <hsizetype>5</hsizetype>
@@ -191,7 +191,7 @@
             </widget>
           </item>
           <item row="1" column="0" >
-            <widget class="Q3GroupBox" name="groupBox1" >
+            <widget class="QGroupBox" name="groupBox1" >
               <property name="sizePolicy" >
                 <sizepolicy>
                   <hsizetype>5</hsizetype>
